# server/Api.Rest/Controllers/AuthController.cs
@@ -1,12 +1,12 @@
-using Api.Rest.Extensions;
 using Application.Interfaces;
+using Application.Interfaces.Infrastructure.Websocket;
 using Application.Models.Dtos;
 using Microsoft.AspNetCore.Mvc;
 
 namespace Api.Rest.Controllers;
 
 [ApiController]
-public class AuthController(ISecurityService securityService) : ControllerBase
+public class AuthController(ISecurityService securityService, IConnectionManager connectionManager) : ControllerBase
 {
 
     public const string LoginRoute =  nameof(Login);
@@ -15,5 +15,16 @@ public class AuthController(ISecurityService securityService) : ControllerBase
     public ActionResult<AuthResponseDto> Login([FromBody] AuthRequestDto dto)
     {
         return Ok(securityService.Login(dto));
+    }
+
+    public const string AuthWithJwtRoute = nameof(AuthWithJwt);
+
+    [HttpGet]
+    [Route(AuthWithJwtRoute)]
+    public ActionResult AuthWithJwt([FromHeader]string authorization, string clientId)
+    {
+        securityService.VerifyJwtOrThrow(authorization);
+        connectionManager.AddToTopic("alex", clientId);
+        return Ok();
     }
 }
